{{$NEXT}}

0.33   2019-01-18

- Replace use of Digest::SHA1 with Digest::SHA. The latter is core since 5.9.3
  so it's one less dependency. Requested by Jonas Smedegaard. GH #17.


0.32   2018-10-20

- Added more documentation to Markdent.pm containing pointers to various
  classes in the distribution. Also added POD documentation to the
  markdent-html script that ships with this distro.


0.31   2018-06-09

- Moved from rt.cpan.org to GitHub issues.


0.30   2018-02-18

- Require Perl 5.10. Perl 5.8.x has very weird parsing failures on valid Perl
  code in this distribution.

- Specify required versions of Params::ValidationCompiler and Test2::V0. This
  module does not work with just any versions of those two. Fixed by Denis
  Ibaev. GitHub #11.


0.29   2017-12-31

- Make the GitHub dialect look for fenced code blocks before other types of
  markup. Otherwise this could parse the _inside_ of a fenced code block as
  containing some sort of block-level markup like a two-line list. Reported by
  Frew Schmidt. GitHub #10.


0.28   2017-11-21

- Require Moose 2.1802 for full compatibility with Specio.


0.27   2017-11-09

- Replaced MooseX::Params::Validate and MooseX::Types with
  Params::ValidationCompiler and Specio. There are also some other internals
  changes to improve performance in this release. Prompted by fREW
  Schmidt. GitHub #9.


0.26   2015-05-31

- Fixes for Unicode characters when generating HTML. The Markdent::Simple::*
  classes now make sure that the scalar it returns containing HTML contains
  characters, not bytes. The Markdent::Handler::HTMLStream::* classes no
  longer entitize non-ASCII characters. Only control characters and HTML
  reserved characters (< > & ") are encoded as HTML entities. The problems
  with Unicode handling were reported by Polina Shubha. GitHub PR #8.

- HTML blocks containing Unicode characters could cause the parser to die or
  warn. Reported by Polina Shubha. GitHub PR #8.
