@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- When Markdent processes raw HTML in Markdown text it will now emit that HTML
+  with its attributes in sorted order, so `<a rel="thing" href="foo">` becomes
+  `<a href="foo" rel="thing">`. Previously the attributes were emitted in a
+  random order. Sorting them ensures that the same source text always renders
+  the same way. Patch by Shlomi Fish. GH #19.
+
+
 0.33   2019-01-18
 
 - Replace use of Digest::SHA1 with Digest::SHA. The latter is core since 5.9.3
